tests/ui/unsafe/ranged_ints4_const.stderr
error[E0133]: mutation of layout constrained field is unsafe and requires unsafe function or block
  --> $DIR/ranged_ints4_const.rs:10:5
   |
LL |     x.0 = 0;
   |     ^^^^^^^ mutation of layout constrained field
   |
   = note: mutating layout constrained fields cannot statically be checked for valid values

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
